[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/levels/initUI.gd" type="Script" id=1]

[node name="control" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.984314, 0.72549, 0.72549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = -23.5
margin_right = 65.5
margin_bottom = 23.5
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btExit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = 56.5
margin_right = 65.5
margin_bottom = 103.5
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 400.0
margin_bottom = 200.0
window_title = "Qual seu nome ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -92.0
margin_right = 192.0
margin_bottom = 64.0
align = 1
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btPlay" to="." method="_on_btPlay_pressed"]
[connection signal="pressed" from="btExit" to="." method="_on_btExit_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
